adds projects and notes
